// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SearchCard /> > renders correctly 1`] = `
<div
  aria-label="Test user"
>
  <img
    alt="Test profile picture"
    src="mockedDataURL"
  />
  <span>
    Test
  </span>
</div>
`;

exports[`<SearchCard /> > renders default profile page on no profile picture 1`] = `
<div
  aria-label="Test user"
>
  <img
    alt="Test profile picture"
    src="/src/assets/default-profile-picture.jpeg"
  />
  <span>
    Test
  </span>
</div>
`;
